[metadata]
name = python-monascaclient
summary = Monasca API Client Library
description-file = README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = https://github.com/openstack/python-monascaclient
classifier =
    Environment :: Console
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages = monascaclient
data_files =
    share = tools/monasca.bash_completion

[entry_points]
console_scripts =
    monasca = monascaclient.shell:main

[pbr]
autodoc_index_modules = True

[wheel]
universal = 1
